contrast fix

--- a/lesson-6/css/medium.css
+++ b/lesson-6/css/medium.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 35rem) {
     footer{
         display: block;
-        background-color: #3685B5;
+        background-color: #0f6faa;
         padding: 1em;
         border-radius: 12px;
         text-align: center;
